# simple-calculator

./: README.md  pyproject.toml
src/calculations_MLovei/: calculator.py
tests/: test.py
