[project]
name = "calculations_MLovei"
version = "0.0.8"
authors = [
  { name="MLovei", email="martynas.love@gmail.com" },
]
description = "A calculator package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project.urls]
Homepage = "https://github.com/mlovei/simple-calculator"
